--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -1,131 +1,115 @@
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
-        <script th:src="@{/js/eventHandler.js}"></script>
-        <link th:href="@{/css/cars.css}" rel="stylesheet"/>
-        <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
-        <title>Re-Volt Store</title>
-    </head>
-    <body>
-        <div th:replace="fragments/navigation.html :: navigation"></div>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
+    <script th:src="@{/js/eventHandler.js}"></script>
+    <link th:href="@{/css/cars.css}" rel="stylesheet"/>
+    <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
+    <title>Re-Volt Store</title>
+</head>
+<body>
+<div th:replace="fragments/navigation.html :: navigation"></div>
 
-        <div class="container">
+<div class="container">
 
-            <details class="filter-box">
-                <summary>Filters</summary>
-                <div class="row">
-                    <div class="col-2">
-                        <p class="filter-title">Engine type</p>
-                        <div class="form-check" th:each="engine : ${engines}">
-                            <input class="form-check-input" type="checkbox" th:id="'checkbox-' + ${engine.type}">
-                            <label class="form-check-label" th:text="|${engine.type} (${enginesCounter.get(engine.type) ?: '0'})|" th:for="'checkbox-' + ${engine.type}">
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <p class="filter-title">Rating</p>
-                        <div class="form-check" th:each="rating : ${ratings}">
-                            <input class="form-check-input" type="checkbox" th:id="'checkbox-' + ${rating.type}">
-                            <label class="form-check-label" th:text="|${rating.type} (${ratingsCounter.get(rating.type) ?: '0'})|" th:for="'checkbox-' + ${rating.type}">
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <p class="filter-title">Speed (mph)</p>
-                        <input type="range" min="0" max="100" value="100">
-                    </div>
-                    <div class="col-sm">
-                        <p class="filter-title">Acceleration (m/s&#178)</p>
-                        <input type="range" min="0" max="100" value="100">
-                    </div>
-                    <div class="col-sm">
-                        <p class="filter-title">Mass (kg)</p>
-                        <input type="range" min="0" max="100" value="100">
-                    </div>
+    <details class="filter-box">
+        <summary th:text="${filterWindow.getName()}">Filters</summary>
+        <div class="row" th:each="filterView : ${filterWindow.getFilterViews()}">
+            <div class="col-2">
+                <p class="filter-title" th:text="${filterView.getName()}"></p>
+                <div class="form-check" th:each="filter : ${filterView.getItems()}">
+                    <input class="form-check-input" th:type="${filter.getType()}"
+                           th:id="'checkbox-' + ${filter.getName()}">
+                    <label class="form-check-label" th:for="'checkbox-' + ${filter.getName()}"
+                           th:text="${filter.toString()}">
+                    </label>
                 </div>
-            </details>
-
-            <h5 class="info">Viewing all cars in the store.</h5>
-
-            <form class="order-container">
-                <label for="order-by">Order by</label>
-                <select name="orderBy" id="order-by">
-                    <option value="1" th:selected="${orderBy == 1}">Id</option>
-                    <option value="2" th:selected="${orderBy == 2}">Price</option>
-                    <option value="3" th:selected="${orderBy == 3}">Name</option>
-                    <option value="4" th:selected="${orderBy == 4}">Engine type</option>
-                    <option value="5" th:selected="${orderBy == 5}">Rating</option>
-                    <option value="6" th:selected="${orderBy == 6}">Speed</option>
-                    <option value="7" th:selected="${orderBy == 7}">Acceleration</option>
-                    <option value="8" th:selected="${orderBy == 8}">Mass</option>
-                </select>
-
-                <label>
-                    <input style="display: inline;" type="radio" name="direction" id="asc" value="asc" th:checked="${direction == 'asc'}"/>
-                    ascending
-                </label>
-                <label>
-                    <input type="radio" name="direction" id="desc" value="desc" th:checked="${direction == 'desc'}"/>
-                    descending
-                </label>
-
-                <input type="submit" value="Submit"/>
-            </form>
-
-            <table class="main-table">
-                <tr class="table-row-header">
-                    <th>ID</th>
-                    <th>Thumbnail</th>
-                    <th>Specifications</th>
-                    <th>Price</th>
-                    <th>Cart</th>
-                    <th>Wishlist</th>
-                </tr>
-                <tr class="table-row-content" th:each="car : ${cars}">
-                    <td class="table-item-id" th:text="${car.id}"></td>
-                    <td class="table-item-thumbnail">
-                        <img th:src="@{'/images/cars/' + ${car.thumbnail.image}}" th:alt="${car.thumbnail.image}">
-                    </td>
-                    <td class="table-item-description">
-                        <p class="name" th:text="${car.name}"></p>
-                        <table>
-                            <tr class="engine">
-                                <td>Engine type</td>
-                                <td th:text="${car.engine.type}"></td>
-                            </tr>
-                            <tr class="rating">
-                                <td>Rating</td>
-                                <td th:text="${car.rating.type}"></td>
-                            </tr>
-                            <tr class="speed">
-                                <td>Speed</td>
-                                <td th:text="${car.speed} + ' mph'"></td>
-                            </tr>
-                            <tr class="acc">
-                                <td>Acceleration</td>
-                                <td th:text="${car.acc} + ' m/s&#178'"></td>
-                            </tr>
-                            <tr class="mass">
-                                <td>Mass</td>
-                                <td th:text="${car.mass} + ' kg'"></td>
-                            </tr>
-                        </table>
-                    </td>
-                    <td class="table-item-price">
-                        <p th:text="'$' + ${car.price ?: '1'}"></p>
-                    </td>
-                    <td class="table-item-cart">
-                        <a th:href="@{#}">Add to Cart</a>
-                    </td>
-                    <td class="table-item-wishlist">
-                        <button th:id="${'button' + car.id}"
-                                th:onclick="|handleWishlist('${car.id}')|"
-                                th:text="${car.wishlisted ? 'Remove from Wishlist' : 'Add to Wishlist'}">
-                        </button>
-                    </td>
-                </tr>
-            </table>
+            </div>
         </div>
-    </body>
+    </details>
+
+    <h5 class="info">Viewing all cars in the store.</h5>
+
+    <form class="order-container">
+        <label for="order-by">Order by</label>
+        <select name="orderBy" id="order-by">
+            <option value="1" th:selected="${orderBy == 1}">Id</option>
+            <option value="2" th:selected="${orderBy == 2}">Price</option>
+            <option value="3" th:selected="${orderBy == 3}">Name</option>
+            <option value="4" th:selected="${orderBy == 4}">Engine type</option>
+            <option value="5" th:selected="${orderBy == 5}">Rating</option>
+            <option value="6" th:selected="${orderBy == 6}">Speed</option>
+            <option value="7" th:selected="${orderBy == 7}">Acceleration</option>
+            <option value="8" th:selected="${orderBy == 8}">Mass</option>
+        </select>
+
+        <label>
+            <input style="display: inline;" type="radio" name="direction" id="asc" value="asc"
+                   th:checked="${direction == 'asc'}"/>
+            ascending
+        </label>
+        <label>
+            <input type="radio" name="direction" id="desc" value="desc" th:checked="${direction == 'desc'}"/>
+            descending
+        </label>
+
+        <input type="submit" value="Submit"/>
+    </form>
+
+    <table class="main-table">
+        <tr class="table-row-header">
+            <th>ID</th>
+            <th>Thumbnail</th>
+            <th>Specifications</th>
+            <th>Price</th>
+            <th>Cart</th>
+            <th>Wishlist</th>
+        </tr>
+        <tr class="table-row-content" th:each="car : ${cars}">
+            <td class="table-item-id" th:text="${car.id}"></td>
+            <td class="table-item-thumbnail">
+                <img th:src="@{'/images/cars/' + ${car.thumbnail.image}}" th:alt="${car.thumbnail.image}">
+            </td>
+            <td class="table-item-description">
+                <p class="name" th:text="${car.name}"></p>
+                <table>
+                    <tr class="engine">
+                        <td>Engine type</td>
+                        <td th:text="${car.engine.type}"></td>
+                    </tr>
+                    <tr class="rating">
+                        <td>Rating</td>
+                        <td th:text="${car.rating.type}"></td>
+                    </tr>
+                    <tr class="speed">
+                        <td>Speed</td>
+                        <td th:text="${car.speed} + ' mph'"></td>
+                    </tr>
+                    <tr class="acc">
+                        <td>Acceleration</td>
+                        <td th:text="${car.acc} + ' m/s&#178'"></td>
+                    </tr>
+                    <tr class="mass">
+                        <td>Mass</td>
+                        <td th:text="${car.mass} + ' kg'"></td>
+                    </tr>
+                </table>
+            </td>
+            <td class="table-item-price">
+                <p th:text="'$' + ${car.price ?: '1'}"></p>
+            </td>
+            <td class="table-item-cart">
+                <a th:href="@{#}">Add to Cart</a>
+            </td>
+            <td class="table-item-wishlist">
+                <button th:id="${'button' + car.id}"
+                        th:onclick="|handleWishlist('${car.id}')|"
+                        th:text="${car.wishlisted ? 'Remove from Wishlist' : 'Add to Wishlist'}">
+                </button>
+            </td>
+        </tr>
+    </table>
+</div>
+</body>
 </html>
